--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 #logging.level.org.springframework = debug
+
+#configure actuator(this might cause performance issues)
+#actuator: http://localhost:8080/actuator ; halBrowser: http://localhost:8080
+management.endpoints.web.exposure.include = *
